<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        card_view:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_ticket_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_weight="2.5"
                    android:text="Ticket No :" />


                <TextView
                    android:id="@+id/txt_ticket_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_unit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_weight="2.5"
                    android:text="Unit :" />


                <TextView
                    android:id="@+id/txt_unit_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_weight="2.5"
                    android:text="Name :" />


                <TextView
                    android:id="@+id/txt_name_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/txt_status"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textSize="16sp"
                    android:layout_weight="2.5"
                    android:text="Status :" />


                <TextView
                    android:id="@+id/txt_status_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:gravity="center_vertical"
                    android:layout_weight="1"/>
            </TableRow>

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TableLayout
                    android:id="@+id/layout_r_rearingCharges_receivable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/padding1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/border">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="@string/location"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="@string/defectstype" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="@string/remark" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="@string/photo" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#FFFFFF">

                        <TextView
                            android:id="@+id/txt_subdef_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/textSizeLarge"
                            android:text=""
                            />

                        <TextView
                            android:id="@+id/txt_subdef_floor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="" />

                        <TextView
                            android:id="@+id/txt_subdef_remarks"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="" />

                        <ImageView
                            android:id="@+id/iv_subdef_photo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:src="@drawable/ic_eye"
                            android:textSize="@dimen/textSizeLarge"
                            android:text="" />

                    </TableRow>


                </TableLayout>

            </ScrollView>

        </LinearLayout>



    </androidx.cardview.widget.CardView>
</RelativeLayout>